--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -9,10 +9,38 @@
   cdkDropList>
 </icc-grid-header>
 
-<icc-grid-viewport *ngIf="gridData$ | async as gridData"
-  [gridConfig]="gridConfig"
-  [columns]="columns"
-  [columnWidths]="columnWidths"
-  [gridData]="gridData"
-  (columnHeaderPosition)="onColumnHeaderPosition($event)">
-</icc-grid-viewport>
+<cdk-virtual-scroll-viewport
+  itemSize="24"
+  (scroll)="onViewportScroll($event)">
+  <ng-container *ngIf="gridData$ | async as gridData">
+    <icc-grid-row *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index;"
+      [gridConfig]="gridConfig"
+      [columns]="columns"
+      [columnWidths]="columnWidths"
+      [record]="record">
+    </icc-grid-row>
+  </ng-container>
+
+</cdk-virtual-scroll-viewport>
+<!--
+    <icc-grid-row *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index;"
+    [gridConfig]="gridConfig"
+    [columns]="columns"
+    [columnWidths]="columnWidths"
+    [record]="record">
+  </icc-grid-row>
+
+      <icc-grid-viewport
+      [gridConfig]="gridConfig"
+      [columns]="columns"
+      [columnWidths]="columnWidths"
+      [gridData]="gridData">
+    </icc-grid-viewport>
+
+    <icc-grid-viewport *ngIf="gridData$ | async as gridData"
+    [gridConfig]="gridConfig"
+    [columns]="columns"
+    [columnWidths]="columnWidths"
+    [gridData]="gridData">
+  </icc-grid-viewport>
+-->
