--- a/projects/icc/grid/src/components/grid-viewport/grid-viewport.component.scss
+++ b/projects/icc/grid/src/components/grid-viewport/grid-viewport.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   height: -webkit-fill-available;
+  flex-direction: column;
 
   cdk-virtual-scroll-viewport {
     flex: 1;
