--- a/projects/icc/grid/src/components/grid-view.component.scss
+++ b/projects/icc/grid/src/components/grid-view.component.scss
@@ -2,4 +2,8 @@
   display: flex;
   flex-direction: column;
   height: -webkit-fill-available;
+
+  cdk-virtual-scroll-viewport {
+    flex: 1;
+  }
 }
