--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -2,19 +2,13 @@
   <icc-layout-header>
     Top Nav Bar
     <div (click)="toggleTheme()">Toggle Theme</div>
-    <icc-icon
-      [config]="{ icon: 'exclamation-circle', status: 'primary' }"
-    ></icc-icon>
+    <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
   </icc-layout-header>
 
   <div class="icc-left-side-bar">
     <icc-accordion [items]="items"></icc-accordion>
 
-    <icc-checkbox
-      [checked]="true"
-      [disabled]="true"
-      (change)="onCheckboxChange($event)"
-    >
+    <icc-checkbox [checked]="true" [disabled]="true" (change)="onCheckboxChange($event)">
       <icc-icon config="exclamation-circle"></icc-icon>
       <span> Test Checkbox </span>
     </icc-checkbox>
