--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
@@ -1,4 +1,3 @@
 <ng-container *ngIf="columnMenus$ | async as vm">
-  <icc-menu [items]="menuItems" (iccMenuItemChange)="onMenuItemChange($event)">
-  </icc-menu>
+  <icc-menu [items]="menuItems" (iccMenuItemChange)="onMenuItemChange($event)"> </icc-menu>
 </ng-container>
