--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -3,8 +3,7 @@
     <div class="icc-grid-toolbar">
       <button (click)="refresh()">Refresh</button>
     </div>
-    <icc-grid-view [gridConfig]="gridConfig" [columns]="columns">
-    </icc-grid-view>
+    <icc-grid-view [gridConfig]="gridConfig" [columns]="columns"> </icc-grid-view>
 
     <icc-grid-footer [gridConfig]="gridConfig"> </icc-grid-footer>
   </ng-container>
