--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -1,6 +1,6 @@
 <div class="grid-header-container">
   <icc-grid-header
-    [ngStyle]="gridHeaderStyle"
+    [ngStyle]="{ 'grid-template-columns': '160px 250px 100px 100px 350px 50px' }"
     [gridConfig]="gridConfig"
     [columns]="columns"
     [columnWidths]="columnWidths"
@@ -16,6 +16,7 @@
 <cdk-virtual-scroll-viewport itemSize="24" (scroll)="onViewportScroll($event)">
   <ng-container *ngIf="gridData$ | async as gridData">
     <icc-grid-row
+      [ngStyle]="{ 'grid-template-columns': '160px 250px 100px 100px 350px 50px' }"
       *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index"
       [gridConfig]="gridConfig"
       [columns]="columns"
