--- a/projects/icc/grid/src/components/grid-view.component.scss
+++ b/projects/icc/grid/src/components/grid-view.component.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   height: -webkit-fill-available;
 
+  .grid-header-container {
+    //display: grid;
+    // width: 32px;
+  }
   cdk-virtual-scroll-viewport {
     flex: 1;
   }
