--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -1,6 +1,7 @@
-<div class="grid-header-container">
+<div class="grid-header-container" [ngStyle]="{ width: '1200px' }">
   <icc-grid-header
-    [ngStyle]="{ 'grid-template-columns': '160px 250px 100px 100px 350px 50px' }"
+    [ngStyle]="{ width: '1500px !important' }"
+    [ngStyle]="{ 'grid-template-columns': '160px 450px 300px 400px 350px 50px' }"
     [gridConfig]="gridConfig"
     [columns]="columns"
     [columnWidths]="columnWidths"
@@ -16,7 +17,7 @@
 <cdk-virtual-scroll-viewport itemSize="24" (scroll)="onViewportScroll($event)">
   <ng-container *ngIf="gridData$ | async as gridData">
     <icc-grid-row
-      [ngStyle]="{ 'grid-template-columns': '160px 250px 100px 100px 350px 50px' }"
+      [ngStyle]="{ 'grid-template-columns': '160px 450px 300px 400px 350px 50px' }"
       *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index"
       [gridConfig]="gridConfig"
       [columns]="columns"
@@ -26,3 +27,7 @@
     </icc-grid-row>
   </ng-container>
 </cdk-virtual-scroll-viewport>
+
+<!--
+      [ngStyle]="{ 'grid-template-columns': '160px 250px 100px 100px 350px 50px' }"
+-->
