--- a/projects/icc/grid/src/components/grid-row/grid-row.component.html
+++ b/projects/icc/grid/src/components/grid-row/grid-row.component.html
@@ -3,12 +3,20 @@
 </icc-grid-cell>
 
 <ng-container *ngFor="let column of columns; trackBy: trackByIndex; let index = index">
-  <icc-grid-cell *ngIf="!column.hidden" [ngStyle]="{ flex: '1 ' + getColumnWidth(index) + 'px' }">
+  <icc-grid-cell *ngIf="!column.hidden">
     <icc-dynamic-grid-cell [record]="record" [column]="column"> </icc-dynamic-grid-cell>
   </icc-grid-cell>
 </ng-container>
 
 <!--
+
+  <ng-container *ngFor="let column of columns; trackBy: trackByIndex; let index = index">
+  <icc-grid-cell *ngIf="!column.hidden" [ngStyle]="{ flex: '1 ' + getColumnWidth(index) + 'px' }">
+    <icc-dynamic-grid-cell [record]="record" [column]="column"> </icc-dynamic-grid-cell>
+  </icc-grid-cell>
+</ng-container>
+
+
     [ngStyle]="{ flex: '0 ' + rowSelectionCellWidth + 'px' }"
   justify-content: center
 <ngrx-grid-cell *ngIf="selectionType">
