display grid scroll

--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -30,6 +30,8 @@
 </cdk-virtual-scroll-viewport>
 
 <!--
+
+    private _gridTemplateColumns: string = '160px 450px 300px 400px 350px 50px';
       [ngStyle]="{ 'grid-template-columns': '160px 250px 100px 100px 350px 50px' }"
           [columnWidths]="columnWidths"
 -->
