--- a/projects/icc-demo/src/app/app.component.scss
+++ b/projects/icc-demo/src/app/app.component.scss
@@ -9,7 +9,7 @@
 
   .icc-center-view {
     display: flex;
-    width: 100%;
+    width: calc(100vw - 250px); //100%;
     padding-right: 10px;
   }
 }
