--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -26,6 +26,6 @@
   .icc-main-container {
     display: flex;
     height: -webkit-fill-available;
-    width: 100%;
+    width: calc(100vw);
   }
 }
