--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -10,6 +10,7 @@
     icc-layout-header {
       display: flex;
       height: 50px;
+      min-height: 50px;
       justify-content: center;
       align-items: center;
     }
@@ -17,6 +18,7 @@
     icc-layout-footer {
       display: flex;
       height: 30px;
+      min-height: 30px;
       justify-content: center;
       align-items: center;
       //color: orange;
