--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: flex;
-  height: 32px;
+  height: 32px; //TODO move to theme?
   background-color: gray; // TODO color
   justify-content: left;
   align-items: center;
