--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  width: 200px;
+  width: 200px; //TODO move to theme?
   padding: 0; // 10px;
   align-items: left;
 
