--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   width: 100%;
-  height: 30px;
+  height: 30px; //TODO move to theme?
   padding-left: 10px;
   align-items: center;
 
@@ -14,8 +14,8 @@
     .grid-header-cell-title {
       display: inline-block;
       cursor: default;
-      font-size: 13px;
-      font-weight: 600;
+      font-size: 13px; //TODO move to theme?
+      font-weight: 600; //TODO move to theme?
       padding-right: 6px;
       //margin: 0 $size-xs 0 0;
 
