--- a/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
@@ -3,7 +3,7 @@
   width: 100%;
   // text-align: center;
   padding: 0 10px;
-  height: 24px;
+  height: 24px; // TODO row cell height in theme or in constants?
 
   /*
   &.expandable-row {
