--- a/projects/icc/grid/src/grid.component.scss
+++ b/projects/icc/grid/src/grid.component.scss
@@ -6,7 +6,7 @@
 
   .icc-grid-toolbar {
     display: flex;
-    height: 32px;
+    height: 32px; // TODO move to theme
     background-color: gray; // TODO grid toolbar and footer later
     align-items: center;
     justify-content: center;
