--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -22,6 +22,7 @@
     'overflow-x': gridConfig.horizontalScroll ? 'auto' : 'hidden',
     'overflow-y': gridConfig.fitVertical ? 'hidden' : 'auto',
   }"
+  (scrolledIndexChange)="onScrolledIndexChange($event)"
   (scroll)="onViewportScroll($event)"
 >
   <ng-container *ngIf="gridData$ | async as gridData">
