--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.html
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.html
@@ -27,7 +27,7 @@
   <i class="fa-solid fa-forward-step"></i>
 </button>
 
-<button (click)="getGridPageData(page)">
+<button (click)="refreshData(page)">
   <i class="fa-solid fa-arrows-rotate"></i>
 </button>
 
