--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh);
-  //width: 100%;
+  width: calc(100vw);
   overflow-y: hidden;
   overflow-x: hidden;
 
@@ -27,7 +27,6 @@
 
   .icc-main-container {
     display: flex;
-    height: -webkit-fill-available;
-    width: calc(100vw);
+    max-height: calc(100vh - 80px);
   }
 }
