--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -5,17 +5,18 @@
     <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
   </icc-layout-header>
 
-  <div class="icc-left-side-bar">
+  <icc-layout-sidebar>
     <icc-accordion [items]="items"></icc-accordion>
 
     <icc-checkbox [checked]="true" [disabled]="true" (change)="onCheckboxChange($event)">
       <icc-icon config="exclamation-circle"></icc-icon>
       <span> Test Checkbox </span>
     </icc-checkbox>
-  </div>
-  <div class="icc-center-view">
+  </icc-layout-sidebar>
+
+  <icc-layout-center>
     <router-outlet></router-outlet>
-  </div>
+  </icc-layout-center>
 
   <icc-layout-footer> Footer Bar </icc-layout-footer>
 </icc-layout>
