--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -15,6 +15,19 @@
       align-items: center;
     }
 
+    icc-layout-sidebar {
+      width: 250px;
+      max-width: 400px;
+      min-width: 250px;
+      padding-right: 10px;
+    }
+
+    icc-layout-center {
+      display: flex;
+      width: calc(100vw - 250px);
+      padding-right: 10px;
+    }
+
     icc-layout-footer {
       display: flex;
       height: 30px;
