--- a/projects/icc/autocomplete/src/autocomplete.component.scss
+++ b/projects/icc/autocomplete/src/autocomplete.component.scss
@@ -1,3 +1,15 @@
 .autocomplete {
   width: 100%;
 }
+
+.icc-option-list {
+  background: gray;
+  /*
+  background: sun-theme(select-options-background-color);
+  border: 1px solid sun-theme(select-border-color);
+  color: sun-theme(select-text-color);
+*/
+  height: 100%;
+  max-height: 320px;
+  overflow: auto;
+}
