--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -3,6 +3,7 @@
     Top Nav Bar
     <div (click)="toggleTheme()">Toggle Theme</div>
     <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+    <icc-select-field [multiSelection]="false"></icc-select-field>
   </icc-layout-header>
 
   <icc-layout-sidebar>
