--- a/projects/icc/form-field/src/fields/select-field/select-field.component.html
+++ b/projects/icc/form-field/src/fields/select-field/select-field.component.html
@@ -1,52 +1,58 @@
-<icc-form-field>
-  <icc-label *ngIf="label !== undefined">
-    {{ label }}
-  </icc-label>
-  <input
-    iccInput
-    autocomplete="off"
-    readonly
-    [value]="value"
-    formControlName="state"
-    (isOverlayOpen)="overlayOpen($event)"
-    (change)="selectChange($event)"
-    (blur)="onBlur()"
-    [iccAutocomplete]="autocomplete"
-    [iccAutocompleteClose]="autocompleteClose"
-  />
-  <icc-icon
-    *ngIf="hasValue"
-    icon="remove"
-    iconClass="autocomplete-remove"
-    iccSuffix
-    (click)="clearSelected()"
-  ></icc-icon>
-  <icc-icon
-    icon="angle-down"
-    iconClass="autocomplete-angle-up-down"
-    iccSuffix
-    [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"
-  ></icc-icon>
-  <icc-icon
-    *ngIf="isOverlayOpen"
-    icon="angle-up"
-    iconClass="autocomplete-angle-up-down"
-    iccSuffix
-    (click)="closeOverlay()"
-  ></icc-icon>
-  <icc-autocomplete
-    #autocomplete="iccAutocomplete"
-    [multiSelection]="multiSelection"
-    [displayWith]="displayFn.bind(this)"
-    [compareWith]="compareFn"
-  >
-    <ng-template iccAutocompleteContent>
-      <ng-container *ngIf="states | filter: value : 'state' as result">
-        <icc-option *ngFor="let option of result" [value]="option" #ref>
-          {{ option.state }}
-        </icc-option>
-        <icc-option class="no-result" *ngIf="!result.length">No Result</icc-option>
-      </ng-container>
-    </ng-template>
-  </icc-autocomplete>
-</icc-form-field>
+<ng-container *ngIf="form" [formGroup]="form">
+  <icc-form-field>
+    <icc-label *ngIf="fieldLabel !== undefined">
+      {{ fieldLabel }}
+    </icc-label>
+    <input
+      iccInput
+      autocomplete="off"
+      [formControlName]="optionId"
+      (isOverlayOpen)="overlayOpen($event)"
+      (change)="selectChange($event)"
+      (blur)="onBlur()"
+      [iccAutocomplete]="autocomplete"
+      [iccAutocompleteClose]="autocompleteClose"
+    />
+    <icc-icon
+      *ngIf="hasValue"
+      icon="remove"
+      iconClass="autocomplete-remove"
+      iccSuffix
+      (click)="clearSelected()"
+    ></icc-icon>
+    <icc-icon
+      icon="angle-down"
+      iconClass="autocomplete-angle-up-down"
+      iccSuffix
+      [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"
+    ></icc-icon>
+    <icc-icon
+      *ngIf="isOverlayOpen"
+      icon="angle-up"
+      iconClass="autocomplete-angle-up-down"
+      iccSuffix
+      (click)="closeOverlay()"
+    ></icc-icon>
+    <icc-autocomplete
+      #autocomplete="iccAutocomplete"
+      [multiSelection]="multiSelection"
+      [displayWith]="displayFn.bind(this)"
+      [compareWith]="compareFn"
+    >
+      <ng-template iccAutocompleteContent>
+        <ng-container *ngIf="options | filter: selectedField.value : optionLabel as result">
+          <icc-option *ngFor="let option of result" [value]="option" #ref>
+            <icc-filter-highlight [value]="option[optionLabel]" [filterValue]="filterValue"> </icc-filter-highlight>
+          </icc-option>
+          <icc-option class="no-result" *ngIf="!result.length">No Result</icc-option>
+        </ng-container>
+      </ng-template>
+    </icc-autocomplete>
+  </icc-form-field>
+</ng-container>
+
+<!--
+          {{ getOptionDisplay(option) }}
+  <ng-container *ngIf="(states | filter: form.get('state').value:'state' ) as result">
+        <ng-container *ngIf="options | filter: value : 'state' as result">
+-->
