--- a/projects/icc/form-field/src/fields/select-field/select-field.component.html
+++ b/projects/icc/form-field/src/fields/select-field/select-field.component.html
@@ -6,6 +6,7 @@
     <input
       iccInput
       autocomplete="off"
+      [readonly]="selectOnly"
       [formControlName]="optionId"
       (isOverlayOpen)="overlayOpen($event)"
       (change)="selectChange($event)"
