--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -4,6 +4,7 @@
     <div (click)="toggleTheme()">Toggle Theme</div>
     <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
     <icc-select-field
+      [selectOnly]="true"
       [multiSelection]="false"
       [value]="states[16]"
       [options]="states"
