--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -45,6 +45,16 @@ $theme: (
   // Panel Colors
   icc-panel-border-color: #f6f1ed,
 
+  // Option colors
+  option-hover-background-color: #f6f1ed,
+  option-selected-text-color: #000000,
+
+  select-background-color: form-field-input-bkg-color,
+  select-hover-background-color: color-basic-transparent-hover,
+  select-border-color: border-basic-color-1,
+  select-text-color: text-alternative-color-1,
+  select-options-background-color: #fbfbfb,
+
   // Text colors
   text-basic-color: color-basic-default,
   text-alternative-color-1: color-basic-default,
