--- a/projects/icc/theme/src/themes/_mapping.scss
+++ b/projects/icc/theme/src/themes/_mapping.scss
@@ -20,4 +20,10 @@ $icc-mapping: (
   icon-success-color: color-success-default,
 
   layout-background-color: background-basic-color-1,
+
+  select-background-color: form-field-input-bkg-color,
+  select-hover-background-color: color-basic-transparent-hover,
+  select-border-color: border-basic-color-1,
+  select-text-color: text-alternative-color-1,
+  select-options-background-color: background-basic-color-2,
 );
