--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -45,6 +45,15 @@ $theme: (
   // Panel Colors
   icc-panel-border-color: #353535,
 
+  // Option colors
+  option-hover-background-color: #000000,
+  option-selected-text-color: #ffffff,
+
+  select-background-color: form-field-input-bkg-color,
+  select-hover-background-color: color-basic-transparent-hover,
+  select-border-color: border-basic-color-1,
+  select-text-color: text-alternative-color-1,
+  select-options-background-color: #191919,
   // Text colors
   text-basic-color: #adadad,
   text-alternative-color-1: #cfcfcf,
