--- a/projects/icc/option/src/_option.component.theme.scss
+++ b/projects/icc/option/src/_option.component.theme.scss
@@ -14,13 +14,10 @@
   }
 
   .icc-option-list {
-    background-color: #fbfbfb; //sun-theme(select-options-background-color);
-    /*
-    background: sun-theme(select-options-background-color);
+    background: icc-theme(select-options-background-color);
+    border: 1px solid icc-theme(select-border-color);
+    color: icc-theme(select-text-color);
 
-  */
-    border: 1px solid sun-theme(select-border-color);
-    color: sun-theme(select-text-color);
     height: 100%;
     max-height: 320px;
     overflow: auto;
