--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -2,7 +2,7 @@
   .unpadded-form-field .icc-form-field {
     padding-left: 0;
   }
-  /*
+
   .icc-form-field-suffix {
     border-bottom-width: 1px;
     border-color: icc-theme(form-field-input-border-color);
@@ -16,7 +16,7 @@
   icc-error {
     color: icc-theme(text-danger-color);
     icc-icon {
-      padding-right: .375rem;
+      padding-right: 0.375rem;
     }
-  }*/
+  }
 }
