--- a/projects/icc/form-field/src/fields/select-field/select-field.component.html
+++ b/projects/icc/form-field/src/fields/select-field/select-field.component.html
@@ -13,27 +13,16 @@
       (blur)="onBlur()"
       [iccAutocomplete]="autocomplete"
       [iccAutocompleteClose]="autocompleteClose"
+      [iccAutocompleteOpen]="autocompleteOpen"
     />
-    <icc-icon
-      *ngIf="hasValue"
-      icon="remove"
-      iconClass="autocomplete-remove"
-      iccSuffix
-      (click)="clearSelected()"
-    ></icc-icon>
+    <icc-icon *ngIf="hasValue" icon="remove" iccSuffix (click)="clearSelected()"></icc-icon>
     <icc-icon
       icon="angle-down"
-      iconClass="autocomplete-angle-up-down"
       iccSuffix
       [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"
+      (click)="openOverlay()"
     ></icc-icon>
-    <icc-icon
-      *ngIf="isOverlayOpen"
-      icon="angle-up"
-      iconClass="autocomplete-angle-up-down"
-      iccSuffix
-      (click)="closeOverlay()"
-    ></icc-icon>
+    <icc-icon *ngIf="isOverlayOpen" icon="angle-up" iccSuffix (click)="closeOverlay()"></icc-icon>
     <icc-autocomplete
       #autocomplete="iccAutocomplete"
       [multiSelection]="multiSelection"
