--- a/projects/icc/form-field/src/fields/select-field/select-field.component.scss
+++ b/projects/icc/form-field/src/fields/select-field/select-field.component.scss
@@ -1,8 +1,9 @@
 :host {
-  .autocomplete-remove {
-    padding: 0 0.625rem;
-    font-size: 0.6rem;
+  icc-icon {
+    padding-left: 5px;
+    font-size: 12px;
   }
+
   input {
     text-overflow: ellipsis;
   }
