--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -42,6 +42,11 @@ $theme: (
   checkmark-background-color: transparent,
   checkmark-checked-background-color: transparent,
 
+  form-field-input-border-color: #f6f1ed,
+  form-field-input-bkg-color: #fff,
+  form-field-focus-border-color: #d0c6bc,
+  form-field-focus-bkg-color: #f6f1ed,
+
   // Panel Colors
   icc-panel-border-color: #f6f1ed,
 
