--- a/projects/icc/form-field/src/input/_input.component.theme.scss
+++ b/projects/icc/form-field/src/input/_input.component.theme.scss
@@ -7,7 +7,7 @@
     &.input-full-width {
       width: 100%;
     }
-    /*
+
     &:focus {
       outline: none;
       background-color: icc-theme(input-focus-background-color);
@@ -18,13 +18,11 @@
       box-shadow: none;
       background-color: transparent;
     }
-    */
   }
 
   textarea[iccInput] {
     display: block;
     height: 3.5rem;
-    /*
     background: icc-theme(form-field-input-bkg-color);
     border: 1px solid icc-theme(form-field-input-border-color);
     padding: 0.375rem;
@@ -33,7 +31,7 @@
     &:focus {
       border-color: icc-theme(form-field-focus-border-color);
       background: icc-theme(form-field-focus-bkg-color);
-    }*/
+    }
   }
 
   /* hide input spin with type=number */
