--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -42,6 +42,11 @@ $theme: (
   checkmark-background-color: transparent,
   checkmark-checked-background-color: transparent,
 
+  form-field-input-border-color: #353535,
+  form-field-input-bkg-color: #191919,
+  form-field-focus-border-color: #4b4f54,
+  form-field-focus-bkg-color: #353535,
+
   // Panel Colors
   icc-panel-border-color: #353535,
 
