--- a/projects/icc/theme/src/themes/_mapping.scss
+++ b/projects/icc/theme/src/themes/_mapping.scss
@@ -13,11 +13,19 @@ $icc-mapping: (
   checkmark-background-color: checkmark-background-color,
   checkmark-checked-background-color: checkmark-checked-background-color,
 
+  form-field-input-border-color: form-field-input-border-color,
+  form-field-input-bkg-color: form-field-input-bkg-color,
+  form-field-focus-border-color: form-field-focus-border-color,
+  form-field-focus-bkg-color: form-field-focus-bkg-color,
+
   icon-default-color: color-basic-default,
   icon-primary-color: color-primary-default,
   icon-warning-color: color-warning-default,
   icon-danger-color: color-danger-default,
   icon-success-color: color-success-default,
+
+  input-focus-background-color: background-basic-color-3,
+  input-border-color: border-basic-color-1,
 
   layout-background-color: background-basic-color-1,
 
