grid column select filter

--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -2,6 +2,7 @@
   margin-top: 0.125rem;
   margin-bottom: 0.125rem;
   padding-left: 0.6875rem;
+  padding-right: 0.6875rem;
   position: relative;
 }
 
