base select filter

--- a/projects/icc/form-field/src/fields/select-field/select-field.component.html
+++ b/projects/icc/form-field/src/fields/select-field/select-field.component.html
@@ -9,7 +9,7 @@
       [readonly]="selectOnly"
       [formControlName]="optionId"
       (isOverlayOpen)="overlayOpen($event)"
-      (change)="selectChange($event)"
+      (change)="onChange($event)"
       (blur)="onBlur()"
       [iccAutocomplete]="autocomplete"
       [iccAutocompleteClose]="autocompleteClose"
