--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -8,8 +8,8 @@
       [multiSelection]="false"
       [value]="states[16]"
       [options]="states"
-      optionLabel="state"
-      optionId="abbr"
+      title="state"
+      name="abbr"
     ></icc-select-field>
   </icc-layout-header>
 
