--- a/projects/icc/grid/src/components/column-filter/select/select-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/select/select-filter.component.html
@@ -3,13 +3,13 @@
   [multiSelection]="false"
   [value]="value"
   [options]="options"
-  optionLabel="label"
-  optionId="value"
   (selectionChange)="onSelectionChange($event)"
 >
 </icc-select-field>
 
 <!--
+    title="label"
+  name="value"
 
   [value]="states[16]"
   <input
