--- a/projects/icc/grid/src/components/column-filter/select/select-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/select/select-filter.component.html
@@ -3,6 +3,7 @@
   [multiSelection]="false"
   [value]="value"
   [options]="options"
+  [placeholder]="filterPlaceholder"
   (selectionChange)="onSelectionChange($event)"
 >
 </icc-select-field>
