--- a/projects/icc/grid/src/_grid.component.theme.scss
+++ b/projects/icc/grid/src/_grid.component.theme.scss
@@ -60,7 +60,7 @@
 
     input {
       // width: 100%;
-      border: solid 1px icc-theme(border-basic-color-1); // TODO color
+      //border: solid 1px icc-theme(border-basic-color-1); // TODO color
       background-color: icc-theme(icc-grid-row-hover-background-color);
     }
   }
