--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -1,8 +1,8 @@
 .icc-form-field {
   margin-top: 0.125rem;
   margin-bottom: 0.125rem;
-  padding-left: 0.6875rem;
-  padding-right: 0.6875rem;
+  padding-left: 10px;
+  padding-right: 10px;
   position: relative;
 }
 
