--- a/projects/icc/form-field/src/input/_input.component.theme.scss
+++ b/projects/icc/form-field/src/input/_input.component.theme.scss
@@ -1,8 +1,9 @@
 @mixin icc-input-theme() {
   [iccInput] {
     height: 1.75rem;
-    border-width: 0 0 1px 0;
-    padding: 0 0.375rem;
+    //border-width: 0 0 1px 0;
+    border: none;
+    //padding: 0 0.375rem;
 
     &.input-full-width {
       width: 100%;
